--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,15 @@
+{% extends "_base.html" %} 
 
+{%load crispy_forms_tags %}
+
+
+
+{% block title %} Log In{% endblock title %} 
+
+{% block content %}
 <form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Log In" />
+  {% csrf_token %}
+   {{form|crispy}}
+  <input type="submit" value="Log in" />
 </form>
+{% endblock content %}
