--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,23 +1,15 @@
+{% extends "_base.html" %}
+{%load crispy_forms_tags %}
 
-{% comment %} <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sign Up Page</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
-  </head>
-  <body>
-    <main>
-      <h1>Welcome to My Website</h1>
-      <h2> sign up page </h2>
-    </main>
-  </body>
-</html> {% endcomment %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Sign Up" />
-</form>
+{% block title %}
+Sign Up
+{% endblock title %}
+
+{% block content %}
+ <form method="POST">
+      {% csrf_token %} {{form|crispy}}
+      <input type="submit" value="Sign Up" />
+    </form>
+{% endblock content %}
+
