--- a/templates/_base.html
+++ b/templates/_base.html
@@ -8,28 +8,15 @@
     />
   </head>
   <body class="container my-4">
-    {% block content %}{% endblock content %}
+    {% if user.is_authenticated %} welcome {{ user.username }}
+    <form action="{% url 'account_logout' %}" method="post">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-danger">sign out</button>
+    </form>
+    {% else %}
+    <a href="{% url 'account_login' %}" class="btn btn-primary">login</a>
+    <a href="{% url 'account_signup' %}" class="btn btn-secondary">sign up</a>
+
+    {% endif %} {% block content %}{% endblock content %}
   </body>
 </html>
-
-{% comment %}
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-    {% block title %} {% endblock title %}
-
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body class="container my-4">
-    {% block content %}{% endblock content %}
-  </body>
-</html>
-{% endcomment %}
