--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,4 @@
-
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Home Page</title>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
-  </head>
-  <body>
-    <main>
-      <h1>Welcome to My Website</h1>
-      <h2> home page </h2>
-    </main>
-  </body>
-</html>
+{% extends "_base.html" %} {% block title%}Home {%endblock%} 
+{% block content%}
+<h1 class="my-4">Home Page</h1>
+{%endblock%}
